# boolsolver2

./: .gitignore  .gitmodules  AstExecute.cpp  AstExecute.h  AstParse.cpp  AstParse.h  AstType.h  CMakeLists.txt  README.md  main.cpp
.github/workflows/: build_cmake.yml
boolsolver_lib/: AstExecute.cpp  AstExecute.h  AstOptimize.cpp  AstOptimize.h  AstParse.cpp  AstParse.h  AstType.cpp  AstType.h  CMakeLists.txt
boolsolver_lib/tests/: AstParseTest.cpp  CMakeLists.txt  CMakeLists.txt.in  TestMain.cpp
